gdnative/tests/ui/export_fail_05.rs
use gdnative::prelude::*;

#[derive(Export, ToVariant)]
#[export(kind)]
pub enum Foo {
    Bar,
}

fn main() {}
